[package]
name = "aquatic_ws_load_test"
version = "0.1.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/greatest-ape/aquatic"
keywords = ["webtorrent", "websocket", "benchmark", "torrent", "bittorrent"]
readme = "../README.md"

[[bin]]
name = "aquatic_ws_load_test"

[features]
cpu-pinning = ["aquatic_common/cpu-pinning"]

[dependencies]
async-tungstenite = "0.17"
aquatic_cli_helpers = "0.1.0"
aquatic_common = "0.1.0"
aquatic_toml_config = "0.1.0"
aquatic_ws_protocol = "0.1.0"

anyhow = "1"
futures = "0.3"
futures-rustls = "0.22"
glommio = "0.7"
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.17"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
