[package]
name = "aquatic_ws_protocol"
version = "0.1.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "aquatic_ws_protocol"

[dependencies]
hashbrown = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.11"

[dev-dependencies]