[package]
name = "aquatic_ws_protocol"
version = "0.1.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "WebTorrent tracker protocol"
repository = "https://github.com/greatest-ape/aquatic"
exclude = ["target"]

[lib]
name = "aquatic_ws_protocol"

[[bench]]
name = "bench_deserialize_announce_request"
path = "benches/bench_deserialize_announce_request.rs"
harness = false

[dependencies]
anyhow = "1"
hashbrown = { version = "0.11", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = { version = "0.4", features = ["allow-non-simd"] }
tungstenite = "0.15"

[dev-dependencies]
criterion = "0.3"
quickcheck = "1"
quickcheck_macros = "1"
