[package]
name = "aquatic_ws_protocol"
description = "WebTorrent tracker protocol"
exclude = ["target"]
keywords = ["webtorrent", "protocol", "peer-to-peer", "torrent", "bittorrent"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
name = "aquatic_ws_protocol"

[[bench]]
name = "bench_deserialize_announce_request"
path = "benches/bench_deserialize_announce_request.rs"
harness = false

[dependencies]
anyhow = "1"
hashbrown = { version = "0.13", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# simd-json version 0.7 seems to have bugs in string parsing
# with custom visitor, where it includes quotes in strings 
simd-json = { version = "0.6", features = ["allow-non-simd"] }
tungstenite = "0.17"

[dev-dependencies]
criterion = "0.3"
quickcheck = "1"
quickcheck_macros = "1"
