[package]
name = "toml_config"
version = "0.1.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "WebTorrent tracker protocol"
repository = "https://github.com/greatest-ape/aquatic"
exclude = ["target"]

[lib]
name = "toml_config"

[dependencies]
serde = "1"
toml = "0.5"
toml_config_derive = { path = "../toml_config_derive" }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
