[package]
name = "aquatic_bencher"
description = "Automated benchmarking of aquatic and other BitTorrent trackers (Linux only)"
keywords = ["peer-to-peer", "torrent", "bittorrent"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

readme = "./README.md"

[[bin]]
name = "aquatic_bencher"

[features]
default = ["udp"]
udp = ["aquatic_udp", "aquatic_udp_load_test"]

[dependencies]
aquatic_udp = { optional = true, workspace = true, features = ["io-uring"] }
aquatic_udp_load_test = { optional = true, workspace = true }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
humanize-bytes = "1"
indexmap = "2"
indoc = "2"
itertools = "0.14"
num-format = "0.4"
nonblock = "0.2"
once_cell = "1"
regex = "1"
serde = "1"
tempfile = "3"
toml = "0.8"

[dev-dependencies]