[package]
name = "aquatic_common"
description = "aquatic BitTorrent tracker common code"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
name = "aquatic_common"

[features]
rustls = ["dep:rustls", "rustls-pemfile"]
prometheus = ["dep:metrics", "dep:metrics-util", "dep:metrics-exporter-prometheus", "dep:tokio"]
# Experimental CPU pinning support. Requires hwloc (apt-get install libhwloc-dev)
cpu-pinning = ["dep:hwloc"]

[dependencies]
aquatic_toml_config.workspace = true

ahash = "0.8"
anyhow = "1"
arc-swap = "1"
duplicate = "2"
git-testament = "0.2"
hashbrown = "0.15"
hex = "0.4"
indexmap = "2"
libc = "0.2"
log = "0.4"
privdrop = "0.5"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
simplelog = { version = "0.12" }
toml = "0.5"

# rustls feature
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }

# prometheus feature
metrics = { version = "0.24", optional = true }
metrics-util = { version = "0.19", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true, default-features = false, features = ["http-listener"] }
tokio = { version = "1", optional = true, features = ["rt", "net", "time"] }

# cpu pinning feature
hwloc = { version = "0.5", optional = true }