[package]
name = "aquatic_http_load_test"
description = "BitTorrent (HTTP over TLS) load tester"
keywords = ["http", "benchmark", "peer-to-peer", "torrent", "bittorrent"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

readme = "README.md"

[[bin]]
name = "aquatic_http_load_test"

[dependencies]
aquatic_common.workspace = true
aquatic_http_protocol.workspace = true
aquatic_toml_config.workspace = true

anyhow = "1"
futures = "0.3"
futures-lite = "1"
futures-rustls = "0.26"
hashbrown = "0.15"
glommio = "0.9"
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
rustls = { version = "0.23", default-features = false, features = ["logging"] } # TLS 1.2 disabled
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
