[package]
name = "aquatic_http_protocol"
description = "HTTP BitTorrent tracker protocol"
keywords = ["http", "protocol", "peer-to-peer", "torrent", "bittorrent"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

readme = "./README.md"

[lib]
name = "aquatic_http_protocol"

[[bench]]
name = "bench_request_from_bytes"
path = "benches/bench_request_from_bytes.rs"
harness = false

[[bench]]
name = "bench_announce_response_to_bytes"
path = "benches/bench_announce_response_to_bytes.rs"
harness = false

[dependencies]
anyhow = "1"
compact_str = { version = "0.7", features = ["serde"] }
hex = { version = "0.4", default-features = false }
httparse = "1"
itoa = "1"
log = "0.4"
memchr = "2"
serde = { version = "1", features = ["derive"] }
serde_bencode = "0.2"
urlencoding = "2"

[dev-dependencies]
bendy = { version = "0.4.0-beta.2", features = ["std", "serde"] }
criterion = "0.4"
quickcheck = "1"
quickcheck_macros = "1"
