[package]
name = "aquatic_peer_id"
description = "BitTorrent peer ID handling"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

readme = "./README.md"

[lib]
name = "aquatic_peer_id"

[features]
default = ["quickcheck"]

[dependencies]
compact_str = "0.8"
hex = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
quickcheck = { version = "1", optional = true }
zerocopy = { version = "0.7", features = ["derive"] }